# deep-kernel-network-profiling

./: .gitignore  Cargo.toml  README.md  build.sh  flamegraph.py  flamegraph_per_cpu.py  flameline.py  run.sh  shell.nix  throughput.py
aya-network-deep-profiling/: Cargo.toml  build.rs
aya-network-deep-profiling-common/: Cargo.toml
aya-network-deep-profiling-common/src/: lib.rs  macros.rs
aya-network-deep-profiling-ebpf/: Cargo.toml
aya-network-deep-profiling-ebpf/src/: classifiers.rs  main.rs  xdp.rs
aya-network-deep-profiling-ebpf/src/perf_events/: cache.rs
aya-network-deep-profiling-ebpf/src/probes/: alloc.rs  conditional.rs  forwarding.rs  link.rs  mod.rs  network.rs  others.rs  physical.rs  processing.rs  reception.rs  routing.rs  transmission.rs  transport.rs
aya-network-deep-profiling-ebpf/src/probes/kernel/: alloc.rs  link.rs  mod.rs  network.rs  others.rs  physical.rs  transport.rs
aya-network-deep-profiling-ebpf/src/probes/user/: dpdk.rs  mod.rs  user_space_program.rs  vpp.rs
aya-network-deep-profiling-ebpf/src/tracepoints/alloc/: kfree.rs  kmalloc.rs  mod.rs  utils.rs
aya-network-deep-profiling-ebpf/src/utils/: context.rs  function.rs  log.rs  macros.rs  mod.rs  time.rs
aya-network-deep-profiling/src/: args.rs  lib.rs  main.rs  memory.rs  throughput.rs  time.rs  utils.rs  xdp.rs
results/debian_ping/: output.txt  results.json
results/debian_rrul/: output.txt
scripts/: create_debian_dpdk_guest.sh  create_debian_guest.sh  create_debian_netmap_guest.sh  create_debian_test_guest.sh  create_debian_vpp_guest.sh  create_fedora_guest.sh  create_tap_interface.sh  find_ebpf_function.sh  guest_ip_config.sh  launch_guest.sh  qemu-shared-tap-network.sh
scripts/guest/: dpdk_config.sh  find_ebpf_function.sh  find_lib_function.sh  install_dpdk.sh  install_netmap.sh  ip_config.sh  mount_shared_folder.sh  vpp_config.sh
