[package]
name = "aya-network-deep-profiling-common"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[features]
default = []
user = ["aya", "serde"]

[dependencies]
paste = { workspace = true }
variant_count = { workspace = true }

aya = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
