[package]
name = "aya-network-deep-profiling-ebpf"
version = "0.1.0"
edition.workspace = true

[features]
default = ["user-space-program"]
user-space-program = ["aya-network-deep-profiling-common/user-space-program"]

[dependencies]
aya-network-deep-profiling-common = { path = "../aya-network-deep-profiling-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
paste = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "aya-network-deep-profiling"
path = "src/main.rs"
